--- a/src/components/Team/Secretary/Secretary.css
+++ b/src/components/Team/Secretary/Secretary.css
@@ -89,6 +89,7 @@
 
 @media screen and (min-width: 420px) {
   .secretary-title {
+    font-size: 32px;
     text-align: left;
   }
 }
